# Solana-Trading-Robot

./: .gitignore  README.md
config/: alpha_wallets.json  bot.json
control/: env.example  package-lock.json  package.json  tsconfig.json
control/src/: botCommands.ts  config.ts  controlBot.ts  controlBotConfig.ts  index.ts  logger.ts  redisControl.ts  walletAnalysis.ts  walletAnalysisCli.ts
control/src/openclaw/: instructions.ts
control/src/openclaw/research/: cache.ts  tokenResearch.ts
control/src/providers/: birdeye.ts  dexscreener.ts  helius.ts  mobula.ts  twitter.ts
core/: Cargo.toml  env.example
core/crates/alerts/: Cargo.toml
core/crates/alerts/src/: lib.rs
core/crates/classify/: Cargo.toml
core/crates/classify/src/: classifier.rs  lib.rs  rpc.rs
core/crates/common/: Cargo.toml
core/crates/common/src/: format.rs  jupiter.rs  lib.rs  token_info.rs
core/crates/core-app/: Cargo.toml
core/crates/core-app/src/: main.rs
core/crates/db/: Cargo.toml
core/crates/db/src/: lib.rs
core/crates/executor/: Cargo.toml
core/crates/executor/src/: lib.rs
core/crates/exits/: Cargo.toml
core/crates/exits/src/: lib.rs
core/crates/filters/: Cargo.toml
core/crates/filters/src/: lib.rs
core/crates/state/: Cargo.toml
core/crates/state/src/: keys.rs  lib.rs  token_cache.rs  types.rs
core/crates/stream/: Cargo.toml
core/crates/stream/src/: lib.rs
docs/: architecture.md
infra/: docker-compose.yml
infra/migrations/: 0001_init.sql
integrations/telegram_tracker/: channels_config.example.json  channels_config.py  redis_bridge.py  requirements.txt  telegram_bot.py  telegram_listener.py  token_detector.py
scripts/: check-prereqs.sh  enqueue-test-buy-intent.py  redis-debug.py  send-test-telegram-alert.py
