[workspace]
resolver = "2"
members = [
  "crates/core-app",
  "crates/common",
  "crates/state",
  "crates/db",
  "crates/stream",
  "crates/classify",
  "crates/filters",
  "crates/executor",
  "crates/exits",
  "crates/alerts",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.95"
dotenvy = "0.15.7"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
redis = { version = "0.27.6", features = ["tokio-comp"] }
sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.26.1", features = ["rustls-tls-webpki-roots"] }
url = "2.5.4"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22.1"
bs58 = "0.5.1"
bincode = "1.3.3"
solana-sdk = "2.1.6"
openssl = { version = "0.10.75", features = ["vendored"] }


