[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
urlencoding = "2.1.3"

[dev-dependencies]
tokio.workspace = true
wiremock = "0.6.2"

