[package]
name = "executor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
bincode.workspace = true
bs58.workspace = true
chrono.workspace = true
openssl.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-sdk.workspace = true
tokio.workspace = true
tracing.workspace = true

state = { path = "../state" }
common = { path = "../common" }


